%% Mermaid ER diagram for Surechigai DB
%% Save as docs/diagrams/er.mmd

erDiagram
  USERS {
    uuid id PK
    string name
    string mail
    string github
    string x
    string icon
    timestamptz created_at
  }
  OAUTH_ACCOUNTS {
    uuid id PK
    uuid user_id FK
    string provider
    string provider_account_id
    string provider_token
    timestamptz created_at
  }
  %% UNIQUE: (provider, provider_account_id)
  REFRESH_TOKENS {
    uuid id PK
    uuid user_id FK
    string token
    timestamptz expires_at
    timestamptz created_at
  }
  IBEACON_DATAS {
    %% one-to-one with USERS: use user_id as primary key to enforce one record per user
    uuid user_id PK
    integer major
    integer minor
    %% FK to USERS.id
    %% UNIQUE: (major, minor) enforced in DDL to make (major,minor) identify a single user
  }
  MESSAGES {
    uuid id PK
    uuid user_id FK
    string message
    timestamptz created_at
    timestamptz deleted_at
  }

  USERS ||--o{ OAUTH_ACCOUNTS : "has"
  USERS ||--o{ REFRESH_TOKENS : "has"
  USERS ||--o{ MESSAGES : "has"
  USERS ||--|| IBEACON_DATAS : "has"

